@@ -90,7 +90,7 @@ public:
 
 	class Input {
 	public:
-		static const int COUNT = 9;
+		static const int COUNT = 10;
 		enum {
 			MOUSE_MOVE,
 			MOUSE_MOVE_SWAP,
@@ -99,6 +99,7 @@ public:
 			NO_MOUSE,
 			JOYSTICK,
 			JOYSTICK_DEADZONE,
+			JOYSTICK_RUMBLE,
 			TOUCH_CONTROLS,
 			TOUCH_SCALE
 		};
